--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ ul li a{
 
 .mainOuter{
     width: 100%;
-    background-color:black ;
-    background-image: url(images/heroimg.jpg);
+    background-color: black;
+    background-image: url(https://images.wallpaperscraft.com/image/laptop_phone_clock_178806_1920x1080.jpg);
     background-repeat: no-repeat;
     background-position: center;
     min-height: 80px;
